# docs/swagger.json
@@ -450,6 +450,11 @@
         },
         "/users/{id}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKey": []
+                    }
+                ],
                 "consumes": [
                     "application/json"
                 ],
@@ -801,6 +806,11 @@
         }
     },
     "securityDefinitions": {
+        "ApiKey": {
+            "type": "apiKey",
+            "name": "api_key",
+            "in": "header"
+        },
         "Bearer": {
             "description": "Type \"Bearer\" followed by a space and JWT token.",
             "type": "apiKey",
