# internal/module/user/controller.go
@@ -77,6 +77,7 @@ func (contl *UserController) GetMe(ctx *gin.Context) {
 //	@Param		id	path		string	true	"User ID"
 //	@Success	200	{object}	models.APIResponse{data=models.UserWithAccounts}
 //	@Router		/users/{id} [get]
+//	@Security	ApiKey
 func (contl *UserController) GetUserById(ctx *gin.Context) {
 	var req GetUserByIDRequest
 
